3/18修正 1. 駁回變為526篇 2. 新增兩組判斷關鍵字(自屬有據&即為理由)

--- a/02新增欄位515篇駁回.ipynb
+++ b/02新增欄位515篇駁回.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_excel(\"Z:/完成檔案/black & law/law_清理過2.xlsx\")"
+    "df = pd.read_excel(\"data/law_清理過2.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -23,6 +23,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -101,7 +114,7 @@
        "4  臺灣臺北地方法院裁判書--民事類【裁判字號】102,婚,351【裁判日期】1040130【裁...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -128,12 +141,14 @@
     "reject_id = []\n",
     "for i,k in list(zip(df['content'],df['Id'])):\n",
     "    if '主文原告之訴駁回' in i:\n",
+    "        reject_id.append(k)\n",
+    "    elif \"主文原告之訴及假執行之聲請均駁回\" in i:\n",
     "        reject_id.append(k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -141,16 +156,16 @@
     {
      "data": {
       "text/plain": [
-       "515"
+       "526"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 共有515篇篇駁回\n",
+    "# 共有526篇篇駁回\n",
     "len(reject_id)"
    ]
   },
@@ -194,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -202,10 +217,10 @@
     {
      "data": {
       "text/plain": [
-       "515"
+       "526"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -227,14 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df2.to_excel(\"data/law_清理過3.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "df2.to_excel(\"Z:/完成檔案/black & law/law_清理過3.xlsx\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -253,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
