修正上述程式

--- a/03_2 找尋最接近的0152.ipynb
+++ b/03_2 找尋最接近的0152.ipynb
@@ -208,65 +208,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "民法第1052條第1項以外之重大事由\n",
-      "1143\n",
-      "民法第1052條第2項\n",
-      "377\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "number = 1\n",
-    "for word in judge_word:\n",
-    "    try:\n",
-    "        if df2['content'][number].rfind(word) != -1:\n",
-    "            # 找出判決詞的位置\n",
-    "            index = df2['content'][number].rfind(word)\n",
-    "            break\n",
-    "    except:\n",
-    "        pass\n",
-    "    \n",
-    "# 進行法條位置與判決詞距離位置的比對\n",
-    "for law in set(law1052[number][0]):\n",
-    "    print(law)\n",
-    "    min_temp = []\n",
-    "    for i in [m.start() for m in re.finditer(law, df2['content'][number])]:\n",
-    "        min_temp.append(abs(i-index))\n",
-    "    print(min(min_temp))\n",
-    "    \n",
-    "    "
+    "judge_law_list = []\n",
+    "for number in range(0,3156):\n",
+    "    for word in judge_word:\n",
+    "        try:\n",
+    "            if df2['content'][number].rfind(word) != -1:\n",
+    "                # 找出判決詞的位置\n",
+    "                index = df2['content'][number].rfind(word)\n",
+    "                break\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "    # 進行法條位置與判決詞距離位置的比對\n",
+    "    min_index = 10000000\n",
+    "    for law in set(law1052[number][0]):\n",
+    "        min_temp = []\n",
+    "        for i in [m.start() for m in re.finditer(law, df2['content'][number])]:\n",
+    "            min_temp.append(abs(i-index))\n",
+    "        # 比較每次的法條的位置，看有沒有更小的要更新\n",
+    "        if min(min_temp) < min_index:\n",
+    "            judge_law = law\n",
+    "            min_index = min(min_temp)\n",
+    "    judge_law_list.append(judge_law)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "377"
+       "3156"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min(min_temp)"
+    "len(judge_law_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df3 = pd.concat([df2, pd.DataFrame(judge_law_list, columns=['判決法條'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df3.to_excel('data/law_判決法條測試1.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
