修正最接近的字詞順序 "有理由","有據","即有理由","自屬有據","准許","判准" 原本正確錯誤比15:14，稍稍提升為17:12

--- a/03_2 找尋最接近的0152.ipynb
+++ b/03_2 找尋最接近的0152.ipynb
@@ -126,12 +126,12 @@
    },
    "outputs": [],
    "source": [
-    "judge_word = [\"判准\",\"准許\",\"自屬有據\",\"即有理由\",\"准予\",\"既為有理由\"]"
+    "judge_word = [\"有理由\",\"有據\",\"即有理由\",\"自屬有據\",\"准許\",\"判准\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -142,13 +142,13 @@
        "[1326, 2255, 5278]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[m.start() for m in re.finditer('民法第1052條第1項第3款', df2['content'][0])]"
+    "# [m.start() for m in re.finditer('民法第1052條第1項第3款', df2['content'][0])]"
    ]
   },
   {
@@ -171,7 +171,7 @@
    ],
    "source": [
     "# 最後一個字的位置\n",
-    "df2['content'][0].rfind('判准')"
+    "# df2['content'][0].rfind('判准')"
    ]
   },
   {
@@ -193,10 +193,10 @@
     }
    ],
    "source": [
-    "a = [1326, 2255, 5278]\n",
-    "b = 3136\n",
-    "for i in a:\n",
-    "    print(abs(i-b))"
+    "# a = [1326, 2255, 5278]\n",
+    "# b = 3136\n",
+    "# for i in a:\n",
+    "#     print(abs(i-b))"
    ]
   },
   {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -252,7 +252,7 @@
        "3156"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -275,13 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df3.to_excel('data/law_判決法條測試1.xlsx')"
+    "df3.to_excel('data/law_判決法條測試3.xlsx')"
    ]
   },
   {
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
